--- a/templates/index.html
+++ b/templates/index.html
@@ -15,10 +15,10 @@
         <ul>
             <!-- <li><a href="users.html">Manage Users</a></li>
             <li><a href="accounts.html">Manage Accounts</a></li>
-            <li><a href="income_sources.html">Manage Income Sources</a></li> -->
-            <li><a href="/categories">Manage Categories</a></li>
-            <!-- <li><a href="expenses.html">Manage Expenses</a></li>
+            <li><a href="income_sources.html">Manage Income Sources</a></li>
             <li><a href="user_passwords.html">Manage User Passwords</a></li> -->
+            <li><a href="/categories">Manage Categories</a></li>
+            <li><a href="/expenses">Manage Expenses</a></li>
 
 
         </ul>
