--- a/templates/update_category.j2
+++ b/templates/update_category.j2
@@ -25,17 +25,17 @@ Source URL: https://github.com/osu-cs340-ecampus/flask-starter-app #}
     </header>
 
     <main>
-        <form action="/update_category/{{ category.categoryID }}" method="POST">
-            <legend><strong>Edit Category</strong></legend>
-            <fieldset>
-                <input type="hidden" value="{{ category.categoryID }}" name="categoryID" required>
-                <label for="categoryName">Category Name:</label>
-                <input type="text" id="categoryName" name="categoryName" value="{{ category.categoryName }}" required>
-            </fieldset>
-            <button type="submit" name="Update_Category">Update Category</button>
-            <button type="button" onClick="window.location.href='/categories'">Cancel</button>
-        </form>
-    </main>
+    <form action="{{ url_for('categories_bp.update_category', categoryID=category.categoryID) }}" method="POST">
+        <legend><strong>Edit Category</strong></legend>
+        <fieldset>
+            <input type="hidden" value="{{ category.categoryID }}" name="categoryID" required>
+            <label for="categoryName">Category Name:</label>
+            <input type="text" id="categoryName" name="categoryName" value="{{ category.categoryName }}" required>
+        </fieldset>
+        <button type="submit" name="Update_Category">Update Category</button>
+        <button type="button" onClick="window.location.href='/categories'">Cancel</button>
+    </form>
+</main>
 
     <footer>
         <p>© 2024 Personal Budget Tracker. All rights reserved.</p>
