--- a/templates/categories.j2
+++ b/templates/categories.j2
@@ -36,6 +36,12 @@ Source URL: https://github.com/osu-cs340-ecampus/flask-starter-app #}
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
+                <li><a href="/categories">Manage Categories</a></li>
+                <li><a href="/expenses">Manage Expenses</a></li>
+                <li><a href="/income">Manage Income Sources</a></li>
+                <li><a href="/users">Manage Users</a></li>
+                <li><a href="/passwords">Manage User Passwords</a></li>
+                <li><a href="/accounts">Manage Accounts</a></li>
             </ul>
         </nav>
     </header>
