--- a/templates/index.html
+++ b/templates/index.html
@@ -13,14 +13,12 @@
     
     <nav>
         <ul>
-            <!-- <li><a href="users.html">Manage Users</a></li>
-            <li><a href="accounts.html">Manage Accounts</a></li>
-            <li><a href="income_sources.html">Manage Income Sources</a></li>
-            <li><a href="user_passwords.html">Manage User Passwords</a></li> -->
             <li><a href="/categories">Manage Categories</a></li>
             <li><a href="/expenses">Manage Expenses</a></li>
-
-
+            <li><a href="/income">Manage Income Sources</a></li>
+            <li><a href="/users">Manage Users</a></li>
+            <li><a href="/passwords">Manage User Passwords</a></li>
+            <li><a href="/accounts">Manage Accounts</a></li>
         </ul>
     </nav>
 
