--- a/templates/expenses.j2
+++ b/templates/expenses.j2
@@ -1,7 +1,9 @@
-{# Citation for the following code:
-Date: 05/29/2024
-Adapted from:
-Source URL: https://github.com/osu-cs340-ecampus/flask-starter-app?tab=readme-ov-file#step-0---quick-and-dirty-task-1-setup
+{# 
+Citation for the following code:
+Date: 05/22/2024
+Code was Adapted from:
+Source URL: https://github.com/osu-cs340-ecampus/flask-starter-app
+Exploration - Developing in Flask: https://canvas.oregonstate.edu/courses/1958399/pages/exploration-developing-in-flask?module_item_id=24181857
 #}
 <!DOCTYPE html>
 <html lang="en">
