--- a/templates/income_sources.j2
+++ b/templates/income_sources.j2
@@ -1,3 +1,10 @@
+{# 
+Citation for the following code:
+Date: 05/22/2024
+Code was Adapted from:
+Source URL: https://github.com/osu-cs340-ecampus/flask-starter-app
+Exploration - Developing in Flask: https://canvas.oregonstate.edu/courses/1958399/pages/exploration-developing-in-flask?module_item_id=24181857
+#}
 <!DOCTYPE html>
 <html lang="en">
 <head>
